nambah dikit lagi

--- a/JsDasar/tipe-data/string.html
+++ b/JsDasar/tipe-data/string.html
@@ -25,9 +25,10 @@
       document.querySelector("p").innerHTML = "aku " + "anak " + "sehat";
 
       // sequence escape
-      document.querySelector(".tab").innerHTML = " aku  &nbsp adalah fullstack dev"
-      document.querySelector(".enter").innerHTML = "wlwlwl <br> wdwdwdwdd"
-
+      document.querySelector(".tab").innerHTML =
+        " aku  &nbsp adalah fullstack dev";
+      document.querySelector(".enter").innerHTML = "wlwlwl <br> wdwdwdwdd";
+      document.querySelector(".petik-dua").innerHTML = '"wlwlwl wdwdwdwdd"';
     </script>
   </body>
 </html>
